style: started the design of the website

--- a/index.html
+++ b/index.html
@@ -5,35 +5,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jarence Rivera Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="main"></div>
-    <div class="top">
-        <h3>JARENCE RIVERA</h3>
-        <hr>
+    <div id="top">
+        <p class="top-bar">JARENCE RIVERA
+            <a href="#projects">PROJECTS</a>
+            <a href="#skills">SKILLS</a>
+            <a href="#autobio">AUTOBIOGRAPHY</a>
+        </p>
     </div>
     <div class="feat-photo"></div>
-    <div class="projects">
+    <div id="projects">
         <div class="project-cont">
-            <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
-            <h2>PROJECT 1</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
+            <div class="text-cont">
+                <h2 class="label">PROJECT 1</h2>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem
+                    perspiciatis a optio enim provident, laudantium aspernatur temporibus. Natus, culpa odio quaerat
+                    accusantium ea assumenda officia ab beatae. Fuga, earum.</p>
+            </div>
         </div>
-        <div class="project-cont"></div>
-            <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
-            <h2>PROJECT 2</h2>
+
+        <div class="project-cont">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
+            <div class="text-cont">
+                <h2 class="label">PROJECT 2</h2>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem
+                    perspiciatis a optio enim provident, laudantium aspernatur temporibus. Natus, culpa odio quaerat
+                    accusantium ea assumenda officia ab beatae. Fuga, earum.</p>
+            </div>
         </div>
-        <div class="project-cont"></div>
-            <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
-            <h2>PROJECT 3</h2>
+        <div class="project-cont">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
+            <div class="text-cont">
+                <h2 class="label">PROJECT 3</h2>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem
+                    perspiciatis a optio enim provident, laudantium aspernatur temporibus. Natus, culpa odio quaerat
+                    accusantium ea assumenda officia ab beatae. Fuga, earum.</p>
+            </div>
         </div>
+
     </div>
-    <div class="skills"></div>
-    <div class="autobio"></div>
-    <div class="footer"></div>
+    <div id="skills"></div>
+    <div id="autobio"></div>
+    <div id="footer">
+        <div class="contact">
+            <table>
+                <tr>
+                    <td>JARENCE RIVERA</td>
+                </tr>
+                <tr>
+                    <td>jcrivera12@up.edu.ph</td>
+                </tr>
+            </table>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
