ui: modified the style.css file and added images and fonts; feat: added some content to index.html

--- a/index.html
+++ b/index.html
@@ -9,56 +9,92 @@
 </head>
 
 <body>
-    <div class="main"></div>
     <div id="top">
-        <p class="top-bar">JARENCE RIVERA
-            <a href="#projects">PROJECTS</a>
-            <a href="#skills">SKILLS</a>
-            <a href="#autobio">AUTOBIOGRAPHY</a>
-        </p>
+        <a href="#projects">PROJECTS</a>
+        <a href="#skills">SKILLS</a>
+        <a href="#autobio">AUTOBIOGRAPHY</a>
     </div>
     <div class="feat-photo"></div>
+    <h1 class="header">PROJECTS</h1>
     <div id="projects">
         <div class="project-cont">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
+            <img class="project-img" src="./images/project_01.png">
             <div class="text-cont">
-                <h2 class="label">PROJECT 1</h2>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem
-                    perspiciatis a optio enim provident, laudantium aspernatur temporibus. Natus, culpa odio quaerat
-                    accusantium ea assumenda officia ab beatae. Fuga, earum.</p>
+                <h1 class="header">FOOD CATERING ORDER WEBSITE</h1>
+                    <div class="description">This website is one of the first websites I developed from scratch. This project was made using HTML, CSS, and JavaScript and it functions the same way as the usual food ordering sites. It was given to as a laboratory exercise during my freshman year. Looking at it now, there are some things that I could've improved on. However, given such a limited time, I believe that I did what I could.
+                    </div>
             </div>
         </div>
+        <div class="project-cont">
+            <img class="project-img" src="./images/project_02.png">
+            <div class="text-cont">
+                <h1 class="header">DIET OPTIMIZATION SOLVER</h2>
+                    <div class="description">This website was a project during the first semester of my sophomore year. We were tasked to create a diet optimization solver (basically a minimization calculator) using R as the backend language and any language for the frontend. I used RShiny which albeit is not a common web development language but it contains similarities to HTML, CSS, and JavaScript each of which I was able to integrate to my website using different modules.</div>
+            </div>
+        </div>
+    </div>
 
-        <div class="project-cont">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
-            <div class="text-cont">
-                <h2 class="label">PROJECT 2</h2>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem
-                    perspiciatis a optio enim provident, laudantium aspernatur temporibus. Natus, culpa odio quaerat
-                    accusantium ea assumenda officia ab beatae. Fuga, earum.</p>
+
+    <div id="skills-autobio">
+        <div id="skills">
+            <h1 class="header">
+                SKILLS
+            </h1>
+            <div class="description">
+                <ul>
+                    <li>
+                        Basic knowledge in HTML, CSS, and JavaScript
+                    </li>
+                    <li>
+                        Can work graciously under pressure
+                    </li>
+                    <li>
+                        Diligent in meeting deadlines
+                    </li>
+                    <li>
+                        Able to communicate openly
+                    </li>
+                    <li>
+                        Lorem
+                    </li>
+                    <li>
+                        Lorem
+                    </li>
+                </ul>
+                
             </div>
         </div>
-        <div class="project-cont">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyJWo6Ql6Tb3kSCTMVeRh-usMKwwkycg94_Q&s">
-            <div class="text-cont">
-                <h2 class="label">PROJECT 3</h2>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem
-                    perspiciatis a optio enim provident, laudantium aspernatur temporibus. Natus, culpa odio quaerat
-                    accusantium ea assumenda officia ab beatae. Fuga, earum.</p>
+        <div id="autobio">
+            <h1 class="header">
+                AUTOBIOGRAPHY
+            </h1>
+            <div class="description">
+                I am Jarence Elcid Marck C. Rivera, a graduating student of the University of the Philippines Los Baños. During my stay in the university, my passion for programming and application development has pushed me to give them my all and see to it that I produce work that I am proud of. 
+
             </div>
         </div>
 
     </div>
-    <div id="skills"></div>
-    <div id="autobio"></div>
+
+
     <div id="footer">
         <div class="contact">
+            <img id="profile-pic" src="./images/me.JPEG">
             <table>
                 <tr>
-                    <td>JARENCE RIVERA</td>
+                    <td class="header">JARENCE ELCID MARCK C. RIVERA</td>
                 </tr>
                 <tr>
-                    <td>jcrivera12@up.edu.ph</td>
+                    <td class="description"><a href=https://github.com/jayusartus>GitHub</a></td>
+                </tr>
+                <tr>
+                    <td class="description">jcrivera12@up.edu.ph</td>
+                </tr>
+                <tr>
+                    <td class="description">(0917) 862 2304</td>
+                </tr>
+                <tr>
+                    <td class="description"><a href="#top">Back to Top.</a></td>
                 </tr>
             </table>
 
